test/valid/58248_division_by_zero/division_by_zero.mag
-- Author: 58248, Afonso Topa 

fun main(_) : Unit -> Unit =
    var x : Int = 19 / 0;
    print(x)
